<resources>
    <string name="app_name">Atividade 14</string>
    <string name="btnApagarTudo">CE</string>
    <string name="btnApagarUm">C</string>
    <string name="btnPorcentagem">%</string>
    <string name="btnDivisao">/</string>
    <string name="btnResultado">=</string>
    <string name="btnMais">+</string>
    <string name="btnMenos">-</string>
    <string name="btnMultiplicacao">x</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnPonto">.</string>
    <string name="btnVirgula">,</string>
</resources>
